# highcharts-hs

./: .gitignore  README.ipynb  README.md  Untitled.ipynb  cabal.project  default.nix  shell.nix
highcharts/: highcharts.cabal
highcharts-gen/: Main.hs  highcharts-gen.cabal  tree.json
highcharts/src/: Highcharts.hs  Javascript.hs
js-qq/: js-qq.cabal
js-qq/src/Language/JavaScript/: JSQQ.hs
language-javascript-qq/: language-javascript-qq.cabal
language-javascript-qq/src/Language/JavaScript/: QQ.hs
nix/: default.nix
