name:                highcharts
version:             0.0.1
license:             MIT
author:              Nicolas Mattia
maintainer:          nicolas@nmattia.com
copyright:           (c) 2018 Nicolas Mattia
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:      Highcharts
  hs-source-dirs:       src
  build-depends:
                        base
                      , aeson
                      , ihaskell
                      , highcharts-types
                      , data-default
                      --, lens
                      , uuid
                      , random
                      --, text
                      --, unordered-containers
                      , js-qq
                      --, template-haskell
  ghc-options: -Wall
