name:                js-qq
version:             0.0.1
license:             MIT
author:              Nicolas Mattia
maintainer:          nicolas@nmattia.com
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:      Language.JavaScript.JSQQ
  hs-source-dirs:       src
  ghc-options:          -Wall
  build-depends:
                        base
                      , aeson
                      , bytestring
                      , regexpr
                      , template-haskell
                      , text
                      , unordered-containers
                      , uuid
