name:                language-javascript-qq
version:             0.0.1
license:             MIT
author:              Nicolas Mattia
maintainer:          nicolas@nmattia.com
copyright:           (c) 2018 Nicolas Mattia
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:      Language.JavaScript.QQ
                        Language.JavaScript.QQ2
  hs-source-dirs:       src
  ghc-options:          -Wall
  build-depends:
                        base
                      , language-javascript
                      , template-haskell
                      , generics-sop
